--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="theUrl.js"></script>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
         categories = null
         $(document).ready(function () {
             $.ajax({
-                url: "http://127.0.0.1:5001/get_categories",
+                url: theUrl + "/get_categories",
                 context: this,
                 method: "post",
                 dataType: "json"
