--- a/items.html
+++ b/items.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+    <script src="theUrl.js"></script>
 </head>
 
 <body>
@@ -97,7 +98,7 @@
                     $(document).ready(function () {
                         localStorage.setItem('category', params.get('category'));        
                         $.ajax({
-                            url: "http://127.0.0.1:5001/get_items",
+                            url: theUrl + "/get_items",
                             context: this,
                             method: "post",
                             data: {'category_id': params.get('category')},
@@ -112,7 +113,7 @@
                         });                        
 
                         $.ajax({
-                            url: "http://127.0.0.1:5001/get_users",
+                            url: theUrl + "/get_users",
                             context: this,
                             method: "post",
                             dataType: "json"
