--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+    <script src="theUrl.js"></script>
 </head>
 <body>
     <div class="container">
@@ -163,7 +164,7 @@
         function addOrderToDb() {
 
             $.ajax({
-                url: "http://127.0.0.1:5001/create_order",
+                url: theUrl + "/create_order",
                 context: this,
                 method: "put",
                 data: {'customer_email': localStorage.getItem('customerEmail'), 'recipient_cards': localStorage.getItem('cart')},
