--- a/summary.html
+++ b/summary.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+    <script src="theUrl.js"></script>
 </head>
 <body>
     <div class="container">
@@ -59,7 +60,7 @@
         orders = {};
         ordersinfoobj = new Object();
         $.ajax({
-            url: "http://127.0.0.1:5001/get_order_info",
+            url: theUrl + "/get_order_info",
             context: this,
             method: "post",
             dataType: "json",
