--- a/items.html
+++ b/items.html
@@ -71,7 +71,7 @@
                         <button type="button" class="btn btn-info" data-toggle="modal" data-target="#recipientModal" data-mode="add">New Order</button>
                     </div>
                     <div class="col-5">
-                        <a class="btn btn-primary float-right disabled" id="nextPageButton" href = "cart.html">Finish</a>
+                        <a class="btn btn-primary float-right disabled" id="nextPageButton" href = "cart.html">Continue</a>
                     </div>
                     </div>
                 </div>
